add lab accounts docs and update TAT docs

--- a/docs/lab/overview/turnaround-times.mdx
+++ b/docs/lab/overview/turnaround-times.mdx
@@ -1,9 +1,6 @@
 ---
 title: "Turnaround Times"
 ---
-import FeatureBeta from '/snippets/feature-beta.mdx';
-
-<FeatureBeta />
 
 For a comprehensive Dashboard-focused overview of turnaround times, check out [the product guide](https://support.junction.com/articles/9137043704-turnaround-time). This page focuses on the API aspects.
 
@@ -21,6 +18,10 @@ Furthermore, each operates on three distinct levels:
 <Note>
 Turnaround times are calculated from historical data. For some tests, we may not yet have enough data to make a determination on its turnaround time. We won't include turnaround times for these tests in our API responses.
 </Note>
+
+<Warning>
+  We recalculate expected turnaround times regularly using the latest live data. Values might change dramatically from time to time to reflect real-world logistical circumstances.
+</Warning>
 
 ## Marker turnaround times
 
